--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,8 +11,8 @@ spring:
     driver-class-name: org.postgresql.Driver
   # Настройки JPA
   jpa:
-    hibernate:
-      ddl-auto: validate
+    # hibernate:
+      # ddl-auto: validate
     show-sql: true
     properties:
       hibernate:
