--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -32,8 +32,8 @@ spring:
       base-url: http://localhost:11431
       chat:
         model: gemma3:4b-it-qat
-    #   embedding:
-    #     model: mxbai-embed-large:335m
+      embedding:
+        model: mxbai-embed-large:335m
 
 # Настройки логирования
 logging:
