--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,10 @@
             <artifactId>spring-ai-advisors-vector-store</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.ai</groupId>
+            <artifactId>spring-ai-rag</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <scope>runtime</scope>
